--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -1,5 +1,6 @@
 body {
     padding: 50px;
+    font: 1.5em Arial,sans-serif;
     
     .bg-danger {
         display: none;
@@ -14,6 +15,7 @@ body {
 
     #todo-list {
         font-size: 20px;
+        margin-top: 20px;
 
         input {
             font-size: 24px;
