--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -13,6 +13,14 @@ body {
         border-radius: 5px;
     }
 
+    .incompleted {
+        font-size: 16px;
+        margin-top: 50px;
+        .amount {
+            color: #FF5345;
+        }
+    }
+
     #todo-list {
         font-size: 20px;
         margin-top: 20px;
